@@ -1,3 +1,7 @@
+2003-08-11  Dave Peticolas  <dave@krondo.com>
+
+	* twisted/enterprise/sqlreflector.py: fix docs
+
 2003-08-08  Donovan Preston  <dp@twistedmatrix.com>
 
 	* Added getAllPatterns API to Widget, which returns all nodes
